--- a/packages/mosaic/design-tokens/components/input.json5
+++ b/packages/mosaic/design-tokens/components/input.json5
@@ -1,7 +1,7 @@
 {
     input: {
         size: {
-            padding: { value: '5px 16px' },
+            padding: { value: '5px {padding.control-horizontal}' },
             width: { value: '100%' },
             'min-height': { value: '30px' }
         },
