--- a/packages/mosaic/design-tokens/components/tree.json5
+++ b/packages/mosaic/design-tokens/components/tree.json5
@@ -2,7 +2,7 @@
     tree: {
         size: {
             'border-width': { value: '2px' },
-            'node-height': { value: '28px' }
+            'node-height': { value: '{size.option-height}' }
         },
         font: {
             node: { value: 'body' }
