--- a/packages/mosaic/design-tokens/config.json5
+++ b/packages/mosaic/design-tokens/config.json5
@@ -31,7 +31,7 @@
                 {
                     destination: 'css-tokens.css',
                     format: 'css/variables',
-                    filter: 'color',
+                    filter: 'size',
                     prefix: 'mc'
                 }
             ]
