--- a/packages/mosaic/design-tokens/components/checkbox.json5
+++ b/packages/mosaic/design-tokens/components/checkbox.json5
@@ -28,7 +28,7 @@
         },
         size: {
             width: { value: '16px' },
-            padding: { value: '24px' },
+            'label-margin': { value: '{margin.iconText_M-horizontal}' },
             'border-width': { value: '1px' },
             'toggle-box-shadow': { value: 'inset 0 0 1px 0 rgba(0, 0, 0, 0.2)' }
         },
