--- a/packages/mosaic/design-tokens/properties/colors.json5
+++ b/packages/mosaic/design-tokens/properties/colors.json5
@@ -1,110 +1,110 @@
 {
     'light-color-scheme': {
-        "primary": {
-            "default": { value: '{palette.blue.500.value}' },
+        primary: {
+            default: { value: '{palette.blue.500.value}' },
 
-            "palette": { value: '{palette.blue}' }
+            palette: { value: '{palette.blue}' }
         },
-        "second": {
-            "default": { value: '{palette.grey.300.value}' },
+        second: {
+            default: { value: '{palette.grey.300.value}' },
 
-            "palette": { value: '{palette.grey}' }
+            palette: { value: '{palette.grey}' }
         },
         error: {
-            "default": { value: '{palette.red.400.value}' },
+            default: { value: '{palette.red.400.value}' },
 
-            "palette": { value: '{palette.red}' }
+            palette: { value: '{palette.red}' }
         },
         info: {
-            "default": { value: '{palette.blue.200.value}' },
+            default: { value: '{palette.blue.200.value}' },
 
-            "palette": { value: '{palette.blue}' }
+            palette: { value: '{palette.blue}' }
         },
         success: {
-            "default": { value: '{palette.green.200.value}' },
+            default: { value: '{palette.green.200.value}' },
 
-            "palette": { value: '{palette.green}' }
+            palette: { value: '{palette.green}' }
         },
         warning: {
-            "default": { value: '{palette.yellow.200.value}' },
+            default: { value: '{palette.yellow.200.value}' },
 
-            "palette": { value: '{palette.yellow}' }
+            palette: { value: '{palette.yellow}' }
         },
-        "foreground": {
-            "text": { value: '{palette.grey.700.value}' },
-            "text-less-contrast": { value: '{palette.grey.400.value}'},
-            "text-disabled": { value: '{palette.grey.300.value}' },
-            "divider": { value: '{palette.grey.100.value}' },
+        foreground: {
+            text: { value: '{palette.grey.700.value}' },
+            'text-less-contrast': { value: '{palette.grey.400.value}'},
+            'text-disabled': { value: '{palette.grey.300.value}' },
+            divider: { value: '{palette.grey.100.value}' },
             border: { value: '{palette.grey.300.value}' },
-            "icon": { value: '{palette.grey.400.value}' }
+            icon: { value: '{palette.grey.400.value}' }
         },
         background: {
             background: { value: 'white' },
-            "background-disabled": { value: '{palette.grey.60.value}' },
+            'background-disabled': { value: '{palette.grey.60.value}' },
 
-            "overlay-hover": { value: 'rgba(black, 0.05)' },
-            "overlay-active": { value: 'rgba(black, 0.1)' },
-            "overlay-disabled": { value: 'rgba(white, 0.3)' }
+            'overlay-hover': { value: 'rgba(black, 0.05)' },
+            'overlay-active': { value: 'rgba(black, 0.1)' },
+            'overlay-disabled': { value: 'rgba(white, 0.3)' }
         },
         states: {
-            "focused-color": { value: '{light-color-scheme.primary.palette.value.500.value}' },
-            "selected-color": { value: '{light-color-scheme.primary.palette.value.100.value}' },
-            "pressed-shadow": { value: 'inset 0 1px 2px 0 rgba(black, 0.2)' },
-            "disabled-opacity": { value: 0.3 }
+            'focused-color': { value: '{light-color-scheme.primary.palette.value.500.value}' },
+            'selected-color': { value: '{light-color-scheme.primary.palette.value.100.value}' },
+            'pressed-shadow': { value: 'inset 0 1px 2px 0 rgba(black, 0.2)' },
+            'disabled-opacity': { value: 0.3 }
         }
     },
     'dark-color-scheme': {
-        "primary": {
-            "default": { value: '{palette.blue.400.value}' },
+        primary: {
+            default: { value: '{palette.blue.400.value}' },
 
-            "palette": { value: '{palette.blue}' }
+            palette: { value: '{palette.blue}' }
         },
-        "second": {
-            "default": { value: '{palette.grey.400.value}' },
+        second: {
+            default: { value: '{palette.grey.400.value}' },
 
-            "palette": { value: '{palette.grey}' }
+            palette: { value: '{palette.grey}' }
         },
         error: {
-            "default": { value: '{palette.red.400.value}' },
+            default: { value: '{palette.red.400.value}' },
 
-            "palette": { value: '{palette.red}' }
+            palette: { value: '{palette.red}' }
         },
         info: {
-            "default": { value: '{palette.blue.400.value}' },
+            default: { value: '{palette.blue.400.value}' },
 
-            "palette": { value: '{palette.blue}' }
+            palette: { value: '{palette.blue}' }
         },
         success: {
-            "default": { value: '{palette.green.400.value}' },
+            default: { value: '{palette.green.400.value}' },
 
-            "palette": { value: '{palette.green}' }
+            palette: { value: '{palette.green}' }
         },
         warning: {
-            "default": { value: '{palette.yellow.400.value}' },
+            default: { value: '{palette.yellow.400.value}' },
 
-            "palette": { value: '{palette.yellow}' }
+            palette: { value: '{palette.yellow}' }
         },
-        "foreground": {
-            "text": { value: '{palette.grey.60.value}' },
-            "text-less-contrast": { value: '{palette.grey.400.value}'},
-            "text-disabled": { value: '{palette.grey.400.value}' },
-            "divider": { value: '{palette.grey.600.value}' },
+        foreground: {
+            text: { value: '{palette.grey.60.value}' },
+            'text-less-contrast': { value: '{palette.grey.400.value}'},
+            'text-disabled': { value: '{palette.grey.400.value}' },
+            divider: { value: '{palette.grey.600.value}' },
             border: { value: '{palette.grey.500.value}' },
-            "icon": { value: '{palette.grey.400.value}' }
+            icon: { value: '{palette.grey.400.value}' }
         },
         background: {
             background: { value: '{palette.grey.800.value}' },
-            "background-disabled": { value: '{palette.grey.600.value}' },
+            'background-disabled': { value: '{palette.grey.600.value}' },
 
-            "overlay-hover": { value: 'rgba(black, 0.05)' },
-            "overlay-active": { value: 'rgba(black, 0.1)' },
-            "overlay-disabled": { value: 'rgba(white, 0.2)' }
+            'overlay-hover': { value: 'rgba(black, 0.05)' },
+            'overlay-active': { value: 'rgba(black, 0.1)' },
+            'overlay-disabled': { value: 'rgba(white, 0.2)' }
         },
         states: {
-            "focused-color": { value: '{dark-color-scheme.primary.palette.value.400.value}' },
-            "selected-color": { value: '{dark-color-scheme.primary.palette.value.700.value}' },
-            "pressed-shadow": { value: 'inset 1px 2px 2px 0 rgba(black, 0.2)' },
-            "disabled-opacity": { value: 0.3 }
+            'focused-color': { value: '{dark-color-scheme.primary.palette.value.400.value}' },
+            'selected-color': { value: '{dark-color-scheme.primary.palette.value.700.value}' },
+            'pressed-shadow': { value: 'inset 1px 2px 2px 0 rgba(black, 0.2)' },
+            'disabled-opacity': { value: 0.3 }
         }
     }
 }
